fix(styling): various alignment, spacing and colour tweaks (#1491)
* Amend text alignment and size, add shadow

Amended heading and subheading text and containers for increased visibility and to cater for longer subheading text. Added text shadow to help with contrast on images. Changed breakpoint for tablet to be 900px.

* Amend card borders and heading text

Removed rounded corners and updated text-shadow values to these can be removed from MCE overrides. Amended heading text class to allow for proper line-height value to be followed.

* Change visited link to dark grey

Make the visited link state a dark grey instead of black, so there is a subtle visual indication of a link being visited already.

* Amend padding to match split section component text

Amended padding to match internal padding of split section component text container.

* Amend split section for bottom-aligned text content

Amended split section to more gracefully display text content at the bottom part of the container; added min-height to ensure sizing is not determined by minimal content.

* Updated snapshots for campaign banner changes

Updated breakpoint in campaign banner, requiring snapshot updates.

--- a/components/section/_split-section.css
+++ b/components/section/_split-section.css
@@ -96,8 +96,13 @@
 
     &__inner {
       max-width: calc(var(--w-mid) / 2 + var(--vr)); /* account for either left or right padding */
-      padding-top: calc(4 * var(--vr));
+      min-height: 27rem;
+      padding-top: calc(2 * var(--vr));
       padding-bottom: calc(2 * var(--vr));
+      display: flex;
+      flex-direction: column;
+      justify-content: end;
+      align-items: flex-start;
     }
 
     &__side:first-child > .split-section__inner { margin-left: auto; }
